[package]
name = "affinity-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
directories = "6.0.0"
anyhow = "1.0.100"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }


[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
strip = true
opt-level = 3
panic = "abort"
overflow-checks = false
incremental = false
