[package]
name = "affinity-rs"
version = "0.2.0"
edition = "2024"
description = "CPU affinity and process priority launcher with profile support"
license = "MIT"
repository = "https://github.com/syedinsaf/affinity-rs"
readme = "README.md"
keywords = ["cpu", "affinity", "priority", "process", "cli"]
categories = ["command-line-utilities", "os"]
authors = ["Syed Insaf"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
directories = "6.0.0"
anyhow = "1.0.101"
num_cpus = "1.17.0"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",               # For elevation checking
    "Win32_UI_Shell",               # For ShellExecuteW (UAC prompt)
    "Win32_UI_WindowsAndMessaging", # For SW_SHOWNORMAL
] }

[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
strip = true
opt-level = 3
panic = "abort"
overflow-checks = false
incremental = false
